// Vitest Snapshot v1

exports[`Badge > Badge baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="badge-demo"
  >
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
        >
          
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          16
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          NEW
        </div>
        
        消息
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          ···
        </div>
        
        消息
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge buttonVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="badge-demo"
  >
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
        >
          
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          16
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          NEW
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
    <div
      class="badge-item"
    >
      <div
        class="t-badge"
      >
        <div
          class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        >
          ···
        </div>
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            小按钮
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge cellVue demo works fine 1`] = `
<div>
  <div
    class="t-cell-group t-cell-group--default"
    style="overflow: hidden;"
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        单行标题
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--medium t-badge--dot"
          >
            
          </div>
          <!---->
        </div>
        
      </div>
      <div
        class="t-cell__right"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        单行标题
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--medium t-badge--circle"
          >
            16
          </div>
          <!---->
        </div>
        
      </div>
      <div
        class="t-cell__right"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        单行标题
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__inner t-badge--medium t-badge--round"
          >
            NEW
          </div>
          <!---->
        </div>
        <div
          class="t-badge"
          style="margin-left: 8px;"
        >
          <div
            class="t-badge__inner t-badge--medium t-badge--circle"
          >
            NEW
          </div>
          <!---->
        </div>
        
      </div>
      <div
        class="t-cell__right"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        单行标题
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge t-badge__ribbon--outer"
        >
          <div
            class="t-badge__inner t-badge--medium t-badge--ribbon"
          >
            NEW
          </div>
          <!---->
        </div>
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        徽标主要分红点、数字、文字和角标提醒
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
      >
        <div
          class="badge-demo"
        >
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
              >
                
              </div>
              
              消息
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                16
              </div>
              
              消息
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                NEW
              </div>
              
              消息
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                ···
              </div>
              
              消息
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
      >
        <div
          class="badge-demo"
        >
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
              >
                
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  小按钮
                  
                </span>
              </button>
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                16
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  小按钮
                  
                </span>
              </button>
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                NEW
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  小按钮
                  
                </span>
              </button>
              
            </div>
          </div>
          <div
            class="badge-item"
          >
            <div
              class="t-badge"
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                ···
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--outline t-button--default t-button--shape-rectangle"
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  小按钮
                  
                </span>
              </button>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <!--v-if-->
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="t-cell-group t-cell-group--default"
          style="overflow: hidden;"
        >
          <!--v-if-->
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--dot"
                >
                  
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--circle"
                >
                  16
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--round"
                >
                  NEW
                </div>
                <!---->
              </div>
              <div
                class="t-badge"
                style="margin-left: 8px;"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--circle"
                >
                  NEW
                </div>
                <!---->
              </div>
              
            </div>
            <div
              class="t-cell__right"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              单行标题
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge t-badge__ribbon--outer"
              >
                <div
                  class="t-badge__inner t-badge--medium t-badge--ribbon"
                >
                  NEW
                </div>
                <!---->
              </div>
              
            </div>
            <!--v-if-->
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
